use the gateway

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -997,7 +997,7 @@ loki:
           cypress_grafana_url: 'https://grafana.dev.bigbang.mil'
       scripts:
         envs:
-          LOKI_URL: 'http://logging-loki-write.logging.svc:3100'
+          LOKI_URL: 'http://logging-loki-gateway.logging.svc:3100'
 
 tempo:
   sso:
