--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2093,10 +2093,25 @@ addons:
                     protocol: TLS
                     name: https
                 resolution: DNS
-
       postgresql:
         persistence:
           size: 256Mi
+        primary:
+          containerSecurityContext:
+            enabled: true
+            runAsUser: 1001
+            runAsGroup: 1001
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
+          #permissions for initContainers
+        volumePermissions:
+          enabled: false
+          securityContext:
+            capabilities:
+              drop:
+                - ALL
       replicaCount: 1
       resources:
         requests:
