typo in dev-sso-values.yaml

--- a/docs/assets/configs/example/dev-sso-values.yaml
+++ b/docs/assets/configs/example/dev-sso-values.yaml
@@ -225,7 +225,7 @@ addons:
       currentAdminPassword: "admin"
     sso:
       enabled: true
-      cname: "P1 SSO"
+      name: "P1 SSO"
       applicationid: "platform1_a8604cc9-f5e9-4656-802d-d05624370245_bb8-saml-sonarqube"
       serverBaseURL: "https://sonarqube.dev.bigbang.mil"
       idpmetadataurl: "https://login.dso.mil/auth/realms/baby-yoda/protocol/saml/descriptor"
