updated docs/assets/configs/example/dev-sso-values.yaml sonarqube applicationid

--- a/docs/assets/configs/example/dev-sso-values.yaml
+++ b/docs/assets/configs/example/dev-sso-values.yaml
@@ -226,7 +226,7 @@ addons:
     sso:
       enabled: true
       name: "P1 SSO"
-      applicationid: "platform1_a8604cc9-f5e9-4656-802d-d05624370245_bb8-saml-sonarqube"
+      applicationid: platform1_a8604cc9-f5e9-4656-802d-d05624370245_bb8-saml-sonarqube
       serverBaseURL: "https://sonarqube.dev.bigbang.mil"
       idpmetadataurl: "https://login.dso.mil/auth/realms/baby-yoda/protocol/saml/descriptor"
       image: "registry1.dso.mil/ironbank/big-bang/base:2.1.0"
