--- a/chart/templates/package/values.yaml
+++ b/chart/templates/package/values.yaml
@@ -10,7 +10,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ $pkg }}-values
-  namespace: {{ dig "namespace" "name" $pkg $vals }}
+  namespace:  {{ if dig "helmReleaseNS" nil (index $.Values.packages $pkg) }}
+                {{ dig "helmReleaseNS" "" (index $.Values.packages $pkg) }}
+              {{ else }}
+                {{ default (dig "namespace" "name" $pkg $vals) "" }}
+              {{ end }}
   labels:
     {{- include "commonLabels" $ | nindent 4 }}
 type: Opaque
