add in the functionality into wrapper as well and change it to helmRelease.namespace

--- a/chart/templates/package/helmrelease.yaml
+++ b/chart/templates/package/helmrelease.yaml
@@ -13,8 +13,8 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: {{ $pkg }}
-  namespace:  {{ if dig "helmReleaseNS" nil (index $.Values.packages $pkg) }}
-                {{ dig "helmReleaseNS" "" (index $.Values.packages $pkg) }}
+  namespace:  {{ if dig "helmRelease" "namespace" nil (index $.Values.packages $pkg) }}
+                {{ dig "helmRelease" "namespace" "" (index $.Values.packages $pkg) }}
               {{ else }}
                 {{ default (dig "namespace" "name" $pkg $vals) "" }}
               {{ end }}
