--- a/chart/templates/package/values.yaml
+++ b/chart/templates/package/values.yaml
@@ -10,8 +10,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ $pkg }}-values
-  namespace:  {{ if dig "helmReleaseNS" nil (index $.Values.packages $pkg) }}
-                {{ dig "helmReleaseNS" "" (index $.Values.packages $pkg) }}
+  namespace:  {{ if dig "helmRelease" "namespace" nil (index $.Values.packages $pkg) }}
+                {{ dig "helmRelease" "namespace" "" (index $.Values.packages $pkg) }}
               {{ else }}
                 {{ default (dig "namespace" "name" $pkg $vals) "" }}
               {{ end }}
