Mattermost #155: Force the usage of mattermost-dbcreds when no specific secret is specified

--- a/chart/templates/mattermost/values.yaml
+++ b/chart/templates/mattermost/values.yaml
@@ -93,6 +93,8 @@ postgresql:
       - private-registry
   {{- if and .username .password .host .port .database }}
   secret: "mattermost-database-secret"
+  {{- else }}
+  secret: "mattermost-dbcreds"
   {{- end }}
   install: true
   {{- if $istioInjection }}
