keycloak renovate testing

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1773,7 +1773,8 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/keycloak.git
       path: "./chart"
-      tag: "24.0.5-bb.1"
+      tag: null
+      branch: "renovate/ironbank"
     helmRepo:
       repoName: "registry1"
       chartName: "keycloak"
