kiali service entries

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -148,6 +148,10 @@ kiali:
                 - 'download.cypress.io'
                 - 'cdn.cypress.io'
                 - 'repo1.dso.mil'
+                - 'content-autofill.googleapis.com'
+                - 'accounts.google.com'
+                - 'clientservices.googleapis.com'
+                - 'optimizationguide-pa.googleapis.com'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
