--- a/chart/templates/elasticsearch-kibana/values.yaml
+++ b/chart/templates/elasticsearch-kibana/values.yaml
@@ -15,7 +15,7 @@ imagePullPolicy: {{ .Values.imagePullPolicy }}
 istio:
   enabled: {{ .Values.istio.enabled }}
   hardened:
-    {{- if or (dig "istio" "hardened" "enabled" false .Values.loki.values) (dig "istio" "hardened" "enabled" false .Values.elasticsearchKibana.values) }}
+    {{- if or (dig "istio" "hardened" "enabled" false .Values.loki.values) (dig "istio" "hardened" "enabled" false .Values.elasticsearchKibana.values) (dig "hardened" "enabled" false .Values.istio.values) (dig "istio" "hardened" "enabled" false .Values.eckOperator.values) (dig "istio" "hardened" "enabled" false .Values.fluentbit.values) (dig "istio" "hardened" "enabled" false .Values.jaeger.values) (dig "istio" "hardened" "enabled" false .Values.mattermost.values) }}
     enabled: true
     {{- else }}
     enabled: false
