--- a/chart/templates/metrics-server/values.yaml
+++ b/chart/templates/metrics-server/values.yaml
@@ -12,6 +12,12 @@ domain: {{ $domainName }}
 
 istio:
   enabled: {{ .Values.istio.enabled }}
+  hardened:
+    {{- if or (dig "istio" "hardened" "enabled" false .Values.tempo.values) (dig "hardened" "enabled" false .Values.istio.values) (dig "istio" "hardened" "enabled" false .Values.metricsServer.values) }}
+    enabled: true
+    {{- else }}
+    enabled: false
+    {{- end }}
   injection: {{ ternary "enabled" "disabled" .Values.istio.enabled }}
 
 
