enabled thanos istio hardening based on packages including istio

--- a/chart/templates/metrics-server/values.yaml
+++ b/chart/templates/metrics-server/values.yaml
@@ -13,7 +13,7 @@ domain: {{ $domainName }}
 istio:
   enabled: {{ .Values.istio.enabled }}
   hardened:
-    {{- if or (dig "istio" "hardened" "enabled" false .Values.tempo.values) (dig "hardened" "enabled" false .Values.istio.values) (dig "istio" "hardened" "enabled" false .Values.metricsServer.values) }}
+    {{- if or (dig "istio" "hardened" "enabled" false .Values.tempo.values) (dig "hardened" "enabled" false .Values.istio.values) ( dig "values" "istio" "hardened" "enabled" false .Values.addons.metricsServer) }}
     enabled: true
     {{- else }}
     enabled: false
