--- a/chart/templates/jaeger/values.yaml
+++ b/chart/templates/jaeger/values.yaml
@@ -16,6 +16,12 @@ domain: {{ $domainName }}
 
 istio:
   enabled: {{ .Values.istio.enabled }}
+  hardened:
+    {{- if or (dig "istio" "hardened" "enabled" false .Values.monitoring.values) (dig "istio" "hardened" "enabled" false .Values.addons.authservice.values) (dig "hardened" "enabled" false .Values.istio.values) (dig "istio" "hardened" "enabled" false .Values.jaeger.values) (dig "istio" "hardened" "enabled" false .Values.tempo.values) (dig "istio" "hardened" "enabled" false .Values.kiali.values) }}
+    enabled: true
+    {{- else }}
+    enabled: false
+    {{- end }}
   jaeger:
     enabled: {{ .Values.istio.enabled }}
     gateways:
