--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -430,6 +430,13 @@ gatekeeper:
 
 kyverno:
   values:
+    enabled: true
+    sourceType: "git"
+    git:
+      tag: null
+      repo: "https://repo1.dso.mil/big-bang/product/packages/kyverno.git"
+      path: "./chart"
+      branch: "testing-for-new-kyverno-3.2.5" 
     networkPolicies:
       externalRegistries:
         allowEgress: true
