--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2240,6 +2240,7 @@ addons:
                   - 'download.cypress.io'
                   - 'cdn.cypress.io'
                   - 'repo1.dso.mil'
+                  - 'registry1.dso.mil'
                   - 'nexus.dev.bigbang.mil'
                   - 'containers.dev.bigbang.mil'
                 location: MESH_EXTERNAL
