--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2241,6 +2241,8 @@ addons:
                   - 'cdn.cypress.io'
                   - 'repo1.dso.mil'
                   - 'registry1.dso.mil'
+                  - 'ib-prod-harbor-storage.s3.us-gov-west-1.amazonaws.com'
+                  - 'ib-prod-harbor-storage.s3.us-gov-east-1.amazonaws.com'
                   - 'nexus.dev.bigbang.mil'
                   - 'containers.dev.bigbang.mil'
                 location: MESH_EXTERNAL
