--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -219,6 +219,9 @@ clusterAuditor:
               resolution: DNS
 
 gatekeeper:
+  git: 
+    tag: null
+    branch: c04a3d142c1a143ad106b8ffb6bc6f57d3974030
   enabled: false
   values:
     replicas: 1
