use actual branch name

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -221,7 +221,7 @@ clusterAuditor:
 gatekeeper:
   git: 
     tag: null
-    branch: c04a3d142c1a143ad106b8ffb6bc6f57d3974030
+    branch: renovate/ironbank
   enabled: false
   values:
     replicas: 1
