added kyverno-cleanup-reports-* to kyverno-policies values.yaml

--- a/chart/templates/kyverno-policies/values.yaml
+++ b/chart/templates/kyverno-policies/values.yaml
@@ -842,6 +842,7 @@ policies:
           - kyverno-cleanup-cluster-admission-reports-*
           - kyverno-cleanup-cluster-ephemeral-reports-*
           - kyverno-cleanup-update-requests-*
+          - kyverno-cleanup-reports-*
       - namespace: velero
         pods:
           allow:
