--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -436,7 +436,7 @@ kyverno:
       tag: null
       repo: "https://repo1.dso.mil/big-bang/product/packages/kyverno.git"
       path: "./chart"
-      branch: "testing-for-new-kyverno-3.2.5" 
+      branch: "main" 
     networkPolicies:
       externalRegistries:
         allowEgress: true
@@ -457,12 +457,6 @@ kyverno:
 kyvernoReporter:
   values:
     enabled: true
-    sourceType: "git"
-    git:
-      repo: "https://repo1.dso.mil/big-bang/product/packages/kyverno-policies.git"
-      branch: "update-kyverno-policy"
-      path: "./chart"
-      tag: null
     bbtests:
       enabled: true
       cypress:
@@ -502,6 +496,12 @@ kyvernoReporter:
 
 kyvernoPolicies:
   values:
+    sourceType: "git"
+    git:
+      repo: "https://repo1.dso.mil/big-bang/product/packages/kyverno-policies.git"
+      branch: "update-kyverno-policy"
+      path: "./chart"
+      tag: null
     bbtests:
       enabled: true
     excludeContainers:
