--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -429,6 +429,13 @@ gatekeeper:
       enabled: true
 
 kyverno:
+  enabled: true
+  sourceType: "git"
+  git:
+    tag: null
+    repo: "https://repo1.dso.mil/big-bang/product/packages/kyverno.git"
+    path: "./chart"
+    branch: kyverno-cleanup-policy-disabled
   values:
     networkPolicies:
       externalRegistries:
