test different git repo for kyverno policies

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -499,7 +499,7 @@ kyvernoPolicies:
     sourceType: "git"
     git:
       repo: "https://repo1.dso.mil/big-bang/product/packages/kyverno-policies.git"
-      branch: "update-kyverno-policy"
+      branch: "disable-policy-cleanup"
       path: "./chart"
       tag: null
     bbtests:
