--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -487,6 +487,10 @@ kyvernoReporter:
 
 
 kyvernoPolicies:
+  enabled: true
+  git:
+    tag: null
+    branch: "2141-add_integration_testing_kyverno-policies" 
   values:
     bbtests:
       enabled: true
