prep for testing kyverno policy update

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -487,6 +487,10 @@ kyvernoReporter:
 
 
 kyvernoPolicies:
+  git:
+    tag: null
+    branch: "update-kyverno-policy"
+  enabled: true
   values:
     bbtests:
       enabled: true
