--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -758,7 +758,8 @@ neuvector:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/neuvector.git
     path: "./chart"
-    tag: "2.7.7-bb.1"
+    tag: null 
+    branch: "148-update-test-values-yaml"
   helmRepo:
     repoName: "registry1"
     chartName: "neuvector"
