testing against main kyverno

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -429,6 +429,10 @@ gatekeeper:
       enabled: true
 
 kyverno:
+  git:
+    tag: null
+    branch: "main"
+  enabled: true
   values:
     networkPolicies:
       externalRegistries:
