--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -160,6 +160,72 @@ imagePullPolicy: IfNotPresent
 # ----------------------------------------------------------------------------------------------------------------------
 # Istio
 #
+istioBase:
+  # -- Toggle deployment of Istio Base
+  enabled: false
+  # -- Choose source type of "git" or "helmRepo"
+  sourceType: "git"
+  git:
+    repo: https://repo1.dso.mil/big-bang/apps/sandbox/istio-base.git
+    path: "./chart"
+    branch: "bb-2213-istio-base"
+    #tag:
+  helmRepo:
+    repoName: "registry1"
+    chartName: "istio-base"
+    tag:
+  # -- Flux reconciliation overrides specifically for the Istio Base Package
+  flux: {}
+  # -- Values to passthrough to the istio-base chart
+  values: {}
+  # -- Post Renderers.  See docs/postrenders.md
+  postRenderers: []
+
+istiod:
+  # -- Toggle deployment of Istio Daemon
+  enabled: false
+  # -- Choose source type of "git" or "helmRepo"
+  sourceType: "git"
+  git:
+    repo: https://repo1.dso.mil/big-bang/apps/sandbox/istiod.git
+    path: "./chart"
+    branch: "bb-2213-istio-istiod"
+    #tag:
+  helmRepo:
+    repoName: "registry1"
+    chartName: "istiod"
+    tag:
+  # -- Flux reconciliation overrides specifically for the Istio Daemon Package
+  flux: {}
+  # -- Values to passthrough to the istiod chart
+  values: {}
+  # -- Post Renderers.  See docs/postrenders.md
+  postRenderers: []
+
+istioGateway:
+  # -- Toggle deployment of Istio Gateway
+  enabled: false
+  # -- Choose source type of "git" or "helmRepo"
+  sourceType: "git"
+  git:
+    repo: https://repo1.dso.mil/big-bang/apps/sandbox/istio-gateway.git
+    path: "./chart"
+    branch: "bb-2213-istio-gateway"
+    #tag:
+
+  # helmRepo:
+  #   repoName: "registry1"
+  #   chartName: "istio-gateway"
+  #   tag:
+
+  # -- Flux reconciliation overrides specifically for the Istio Gateway Package
+  flux: {}
+  # -- Values to passthrough to the istio-base chart
+  values: {}
+  # -- Post Renderers.  See docs/postrenders.md
+  postRenderers: []
+
+
 istio:
   # -- Toggle deployment of Istio.
   enabled: true
