--- a/chart/templates/istio-gateway/namespace.yaml
+++ b/chart/templates/istio-gateway/namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: istio-gateway
+  name: istio-system
   labels:
     istio-gateway-managed: Reconcile
     istio-injection: disabled
