--- a/chart/templates/istiod/namespace.yaml
+++ b/chart/templates/istiod/namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: istiod
+  name: istio-system
   labels:
     istiod-managed: Reconcile
     istio-injection: disabled
