--- a/chart/templates/istio-base/namespace.yaml
+++ b/chart/templates/istio-base/namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: istio-base
+  name: istio-system
   labels:
     istio-base-managed: Reconcile
     istio-injection: disabled
