--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -168,7 +168,7 @@ istioBase:
   git:
     repo: https://repo1.dso.mil/big-bang/apps/sandbox/istio-base.git
     path: "./chart"
-    branch: "bb-2213-istio-base"
+    branch: "main"
     #tag:
   helmRepo:
     repoName: "registry1"
