--- a/chart/templates/istiod/namespace.yaml
+++ b/chart/templates/istiod/namespace.yaml
@@ -1,12 +1,12 @@
-{{- if .Values.istiod.enabled }}
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: istio-system
-  labels:
-    istiod-managed: Reconcile
-    istio-injection: disabled
-    app.kubernetes.io/name: istiod
-    app.kubernetes.io/component: "core"
-    {{- include "commonLabels" . | nindent 4}}
-{{- end }}
+# {{- if .Values.istiod.enabled }}
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: istio-system
+#   labels:
+#     istiod-managed: Reconcile
+#     istio-injection: disabled
+#     app.kubernetes.io/name: istiod
+#     app.kubernetes.io/component: "core"
+#     {{- include "commonLabels" . | nindent 4}}
+# {{- end }}
