--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -189,7 +189,7 @@ istiod:
   git:
     repo: https://repo1.dso.mil/big-bang/apps/sandbox/istiod.git
     path: "./chart"
-    branch: "bb-2213-istio-istiod"
+    branch: "main"
     #tag:
   helmRepo:
     repoName: "registry1"
@@ -210,7 +210,7 @@ istioGateway:
   git:
     repo: https://repo1.dso.mil/big-bang/apps/sandbox/istio-gateway.git
     path: "./chart"
-    branch: "bb-2213-istio-gateway"
+    branch: "main"
     #tag:
   helmRepo:
     repoName: "registry1"
