--- a/chart/templates/istio-base/imagepullsecret.yaml
+++ b/chart/templates/istio-base/imagepullsecret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: private-registry
-  namespace: istio-base
+  namespace: istio-system
   labels:
     app.kubernetes.io/name: istio-base
     app.kubernetes.io/component: "core"
