--- a/chart/templates/istio-gateway/values.yaml
+++ b/chart/templates/istio-gateway/values.yaml
@@ -3,7 +3,7 @@
 {{- end }}
 
 {{- define "bigbang.defaults.istioGateway" -}}
-createNamespace: false
+createNamespace: true
 
 enterprise: {{ .Values.istio.enterprise }}
 imagePullPolicy: {{ .Values.imagePullPolicy }}
