--- a/chart/templates/istio-base/helmrelease.yaml
+++ b/chart/templates/istio-base/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istio-base
-  namespace: {{ .Release.Namespace }}
+  namespace: istio-system
   labels:
     app.kubernetes.io/name: istio-base
     app.kubernetes.io/component: "core"
