--- a/chart/templates/istio-base/namespace.yaml
+++ b/chart/templates/istio-base/namespace.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.istioBase.enabled }}
+{{- if or .Values.istioBase.enabled .Values.istiod.enabled }}
 apiVersion: v1
 kind: Namespace
 metadata:
