--- a/chart/templates/istiod/imagepullsecret.yaml
+++ b/chart/templates/istiod/imagepullsecret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: private-registry
-  namespace: istiod
+  namespace: istio-system
   labels:
     app.kubernetes.io/name: istiod
     app.kubernetes.io/component: "core"
