--- a/chart/templates/istio-base/helmrelease.yaml
+++ b/chart/templates/istio-base/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istio-base
-  namespace: istio-system
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: istio-base
     app.kubernetes.io/component: "core"
@@ -42,18 +42,18 @@ spec:
 
   {{- if .Values.istioBase.postRenderers }}
   postRenderers:
-  # {{ toYaml .Values.istioBase.postRenderers | nindent 4 }}
-  # {{- end }}
-  # valuesFrom:
-  #   - name: {{ .Release.Name }}-istio-base-values
-  #     kind: Secret
-  #     valuesKey: "common"
-  #   - name: {{ .Release.Name }}-istio-base-values
-  #     kind: Secret
-  #     valuesKey: "defaults"
-  #   - name: {{ .Release.Name }}-istio-base-values
-  #     kind: Secret
-  #     valuesKey: "overlays"
+  {{ toYaml .Values.istioBase.postRenderers | nindent 4 }}
+  {{- end }}
+  valuesFrom:
+    - name: {{ .Release.Name }}-istio-base-values
+      kind: Secret
+      valuesKey: "common"
+    - name: {{ .Release.Name }}-istio-base-values
+      kind: Secret
+      valuesKey: "defaults"
+    - name: {{ .Release.Name }}-istio-base-values
+      kind: Secret
+      valuesKey: "overlays"
 
   {{- if or .Values.gatekeeper.enabled .Values.kyvernoPolicies.enabled }}
   dependsOn:
