set to warn for all observability packages

--- a/chart/templates/thanos/helmrelease.yaml
+++ b/chart/templates/thanos/helmrelease.yaml
@@ -12,6 +12,8 @@ metadata:
   annotations:
     checksum/bigbang-values: {{ include (print $.Template.BasePath "/thanos/values.yaml") . | sha256sum }}
 spec:
+  driftDetection:
+    mode: warn
   releaseName: {{ $pkg }}
   targetNamespace: {{ $pkg }}
   chart:
