--- a/chart/templates/loki/helmrelease.yaml
+++ b/chart/templates/loki/helmrelease.yaml
@@ -12,6 +12,8 @@ metadata:
   annotations:
     checksum/bigbang-values: {{ include (print $.Template.BasePath "/loki/values.yaml") . | sha256sum }}
 spec:
+  driftDetection:
+    mode: warn
   releaseName: {{ default "logging-loki" .Values.loki.releaseName }}
   targetNamespace: logging
   chart:
