--- a/chart/templates/istiod/helmrelease.yaml
+++ b/chart/templates/istiod/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istiod
-  namespace: istio-system
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: istiod
     app.kubernetes.io/component: "core"
