--- a/chart/templates/istiod/values.yaml
+++ b/chart/templates/istiod/values.yaml
@@ -1,7 +1,9 @@
-{{- if .Values.istiod.enabled }}
-{{- include "values-secret" (dict "root" $ "package" .Values.istiod "name" "istiod" "defaults" (include "bigbang.defaults.istiod" .)) }}
-{{- end }}
+{{- $pkg := "istiod" }}
 
+{{- /* Create secret */ -}}
+{{- if (get .Values $pkg).enabled }}
+{{- include "values-secret" (dict "root" $ "package" (get .Values $pkg) "name" ($pkg | kebabcase) "defaults" (include (printf "bigbang.defaults.%s" $pkg | kebabcase) .)) }}
+{{- end }}
 {{- define "bigbang.defaults.istiod" -}}
 createNamespace: false
 
