--- a/chart/templates/istio-gateway/values.yaml
+++ b/chart/templates/istio-gateway/values.yaml
@@ -8,7 +8,7 @@
 {{- define "bigbang.defaults.istio-gateway" -}}
 createNamespace: true
 
-enterprise: {{ .Values.istioBase.enterprise }}
+enterprise: {{ .Values.istioGateway.enterprise }}
 imagePullPolicy: {{ .Values.imagePullPolicy }}
 
 imagePullSecrets:
