--- a/chart/templates/istio-gateway/values.yaml
+++ b/chart/templates/istio-gateway/values.yaml
@@ -8,15 +8,15 @@
 {{- define "bigbang.defaults.istio-gateway" -}}
 createNamespace: true
 
-enterprise: {{ .Values.istioGateway.enterprise }}
 imagePullPolicy: {{ .Values.imagePullPolicy }}
 
 imagePullSecrets:
-  - private-registry
+  - name: private-registry
 
 networkPolicies:
   enabled: {{ .Values.networkPolicies.enabled }}
   controlPlaneCidr: {{ .Values.networkPolicies.controlPlaneCidr }}
+
 monitoring:
   enabled: {{ .Values.monitoring.enabled }}
 {{- end -}}
