--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -210,7 +210,7 @@ istioGateway:
   git:
     repo: https://repo1.dso.mil/big-bang/apps/sandbox/istio-gateway.git
     path: "./chart"
-    branch: "main"
+    branch: "schema-test"
     #tag:
   helmRepo:
     repoName: "registry1"
