smoke testing nexus

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1321,7 +1321,7 @@ addons:
 
   nexusRepositoryManager:
     # -- Toggle deployment of Nexus Repository Manager.
-    enabled: false
+    enabled: true
 
     # -- Choose source type of "git" or "helmRepo"
     sourceType: "git"
@@ -1329,7 +1329,7 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/nexus.git
       path: "./chart"
-      tag: "69.0.0-bb.2"
+      branch: "renovate/ironbank"
     helmRepo:
       repoName: "registry1"
       chartName: "nexus-repository-manager"
